fix letter-spacing

--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -8,7 +8,7 @@ body{
 h1{
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2em;
-    letter-spacing: 1.2rem;
+    letter-spacing: 1.2em;
     border-bottom: 3px solid rgb(115, 115, 114);
     box-shadow: black 1px;
 }
